<resources>
    <string name="app_name">Final Project</string>
    <string name="btn_add_character">Add Character</string>
    <string name="btn_add_player">Add Player</string>
    <string name="lbl_FirstName">First Name</string>
    <string name="lbl_LastName">Last Name</string>
    <string name="chk_Active">Active</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="lblName">Character Name</string>
    <string name="lblBuild">Build/Class</string>
    <string name="lblRace">Race</string>
    <string name="lblLvl">Level</string>
    <string name="lblCreated">Created on</string>
    <string name="btnCharacterList">Characters</string>
    <string name="btnPlayerList">Players</string>
    <string name="btnBack">Back to Home</string>
    <string name="btnDate">Pick Date</string>
    
</resources>