<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersDetailsActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lblFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_FirstName" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType=""/>

    <TextView
        android:id="@+id/lblLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_LastName" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType=""/>

    <CheckBox
        android:id="@+id/chkActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_Active" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:visibility="gone"/>
</LinearLayout>